tests/negative/ownership/ownership_branch_move.tx
class A { id: int; }
function main() {
    let a = new A();
    if (1 == 1) {
        let b = a; // moved
    } else {
        // not moved
    }
    print(a.id); // Error: possibly moved
}
